// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `"Horizontal Rule"`;

exports[`HR Element render() should render correctly 1`] = `
Object {
  "input": undefined,
  "props": Object {
    "htmlAttributes": Object {
      "someAttr": "hello",
    },
    "id": "hr",
  },
  "type": Object {
    "render": [Function],
    "type": "Horizontal Rule",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <hr
    id="dialog-hr"
    someattr="hello"
  />,
}
`;

exports[`HR Element render() should render correctly 2`] = `
Object {
  "input": undefined,
  "props": Object {
    "id": "noHTML",
  },
  "type": Object {
    "render": [Function],
    "type": "Horizontal Rule",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <hr
    id="dialog-noHTML"
  />,
}
`;
